[gd_scene load_steps=28 format=2]

[ext_resource path="res://Sprites/Enemys/Itachi/itachi_34.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_33.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_9.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_18.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_19.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_10.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_20.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_22.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_23.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_28.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_29.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_30.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_26.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_27.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_31.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_32.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_24.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Enemys/Itachi/itachi_25.png" type="Texture" id=24]
[ext_resource path="res://Scripts/EnemyShooter.gd" type="Script" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "Justu",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 17.0
height = 26.0

[node name="EnemyShooter" type="KinematicBody2D"]
position = Vector2( 139, 270 )
script = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.00012207, 0 )
frames = SubResource( 1 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, -5 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 12, -8 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 300, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.198

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2( 34, -35 )
scale = Vector2( 1.4, 1.4 )
enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
